# ncpi-fhir-client

./: README.md  pyproject.toml  requirements.txt  setup.py
ncpi_fhir_client/: __init__.py  fhir_client.py  fhir_result.py  host_config.py  ridcache.py
ncpi_fhir_client/fhir_auth/: __init__.py  auth_basic.py  auth_gcp_oath2.py  auth_gcp_target_service.py  auth_kf_aws.py  auth_kf_openid.py  google_auth.py
tests/: test_auth_basic.py  test_auth_kf_aws.py  test_fhir_auth.py  test_fhir_result.py  test_host_config.py  test_ridcache.py
